# ba.ai

./: .gitignore  CMakeLists.txt
include/: Card.h  CardList.h  Enums.h  Player.h
src/: Card.cpp  CardList.cpp  Player.cpp  main.cpp
